--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "camelcase": "^5.0.0",
     "expo": "^31.0.0",
     "expo-three": "^3.0.0-alpha.4",
     "firebase": "^5.5.5",
